# libcogito

./: .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  Makefile.am  README.md  cogito.h  cogito.l  cogito.lex  configure.ac  main.c  parser.y
.github/workflows/: main.yml
amazon/: Dockerfile  build  cogito.spec  libcogito.spec
debian/: Dockerfile  changelog  control  copyright  rules
docs/: index.html
docs/assets/: favicon.ico.gzip  style.css
src/: Makefile.am  bin-cogito.h  buffer.c  buffer.h  cogito.h  cogito.l  errors.h  json.c  linked-list.c  linked-list.h  linked_list.c  linked_list.h  list.c  list.h  main.c  parser.y  response.c  response.h  smart_string.c  smart_string.h  statement.c  statement.h  statement_part.c  statement_part.h
test-files/: input.iam  input.json  libtest.c  output.json  test
tests/: Makefile.am  check_buffer  check_buffer.c  check_linked_list.c  check_list.c  check_response.c  check_statement  check_statement.c
tests/integration/: input.iam  input.json  libtest.c  output.iam  output.json  test
